--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   </head>
 
   <body>
-    <div id="root" class="bg-slate-100 text-black"></div>
+    <div id="root" class="bg-slate-100 text-black min-h-full"></div>
     <script>
       // fix the keplr window type error when there are no node polyfills
       var global = global || window;
